[tool.poetry]
name = "local-chatbot"
version = "0.1.0"
description = "Chatbot con base de datos local sobre croma, LLM local con llama 3 y Ollama y Langchain como framework"
authors = ["Ariel Amado"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.1.17"
langchain-community = "^0.0.37"
PyMuPDF = "^1.24.2"
chromadb = "^0.5.0"
fastembed = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
